# acautils

./: .flake8  .gitignore  Changelog.md  README.md  pyproject.toml
.github/workflows/: linting.yml  linting_ruff-mypy.yml  linting_ruff.yml
acautils/: setup_log.py  standard_log.py  version_handler.py
tests/: conftest.py  log2dshowcase.py  showcase.py  test_basic.py
