[tool.poetry]
name = "acautils"
version = "0.1.0"
description = "Shared functionality across ACA tools"
authors = ["Magnus Lindholm <malini@aarhus.dk>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]