[tool.poetry]
name = "acautils"
version = "0.1.6"
description = "Shared functionality across ACA tools"
authors = ["Magnus Lindholm <malini@aarhus.dk>"]
license = "GPL 3.0"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]